# CFS_Editor

./: .gitignore  Cargo.toml  README.md  build.rs
src/: app.rs  error.rs  main.rs  utils.rs
src/data/: database.rs  mod.rs  sponsor.rs  staff.rs  team.rs
src/ui/: dialogs.rs  mod.rs  sponsor_editor.rs  staff_list.rs  team_details.rs  team_list.rs  theme.rs  visualization.rs  widgets.rs
