[package]
name = "rust-cfs"
version = "0.1.0"
edition = "2021"
authors = ["卡尔纳斯"]
description = "CFS Team Editor - An application for managing and editing football team data"

[dependencies]
eframe = "0.24.1"
egui = "0.24.1"
egui_extras = "0.24.1"
image = "0.24.8"
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
native-dialog = "0.6.4"
log = "0.4.20"
env_logger = "0.10.1"
chrono = "0.4.31"
anyhow = "1.0.75"
thiserror = "1.0.50"
mime_guess = "2.0.5"
